--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o " aria-hidden="true "></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem ">
-                            <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download " aria-hidden="true "></i><span>Download CV</span></a>
+                            <a href="assets/cv/Stefanos Sgourdas CV.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download " aria-hidden="true "></i><span>Download CV</span></a>
                         </li>
                     </ul>
                 </div>
@@ -97,7 +97,7 @@
                             <div class="col-xs-10 col-sm-10">
                                 <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                                 <p>
-                                    I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.
+                                    I am a skilled person with experienced in several IT sectors, from Data Analysis, Full Stack Development to Cloud Technologies & with a  technical experience that I bring to every project.
                                 </p>
                             </div>
                         </div>
@@ -123,7 +123,7 @@
                             <div class="col-xs-10 col-sm-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working across the stack. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm aslo a self starter when working solo.
+                                    I work quickly and effectively in getting things done and working across the project. I'm an excellent communicator who thrives in bright and enthusiastic teams and I'm aslo a self starter when working solo.
                                 </p>
                             </div>
                         </div>
@@ -144,15 +144,15 @@
                 <h5 class="uppercase general-sub ">Download My CV</h5>
                 <p class="inline-block ">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf "><i class="fa fa-download " aria-hidden="true "></i></a>
+                    <a href="assets/cv/Stefanos Sgourdas CV.pdf" target="_blank" class="cv-pdf "><i class="fa fa-download " aria-hidden="true "></i></a>
                 </p>
             </div>
             <div class="col-sm-4 ">
                 <h5 class="uppercase general-sub ">MySocial</h5>
                 <ul class="list-inline social-links ">
-                    <li><a target="_blank " href="# "><i class="fa fa-facebook "></i></a></li>
+                    <li><a target="_blank " href="https://www.facebook.com/stefanos.sgourdas"><i class="fa fa-facebook "></i></a></li>
                     <li><a target="_blank " href="# "><i class="fa fa-twitter "></i></a></li>
-                    <li><a target="_blank " href="# "><i class="fa fa-linkedin "></i></a></li>
+                    <li><a target="_blank " href="https://ie.linkedin.com/in/stefanos-sgourdas-4673702a"><i class="fa fa-linkedin "></i></a></li>
                     <li><a target="_blank " href="# "><i class="fa fa-pinterest "></i></a></li>
                     <li><a target="_blank " href="# "><i class="fa fa-instagram "></i></a></li>
                     <li><a target="_blank " href="# "><i class="fa fa-youtube "></i></a></li>
