--- a/resume.html
+++ b/resume.html
@@ -18,8 +18,8 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title">
                     <div class="heading">
-                        <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title"> Full Stack Developer</h2>
+                        <h1 class="name">Stefanos Sgourdas</h1>
+                        <h2 class="title"> Full Stack Developer / Data Analyst</h2>
                     </div>
                 </div>
                 <div class="row">
@@ -34,7 +34,7 @@
                             <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o " aria-hidden="true "></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem ">
-                            <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download " aria-hidden="true "></i><span>Download CV</span></a>
+                            <a href="assets/cv/Stefanos Sgourdas Cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download " aria-hidden="true "></i><span>Download CV</span></a>
                         </li>
                     </ul>
                 </div>
@@ -50,21 +50,21 @@
                     </div>
                 </div>
                 <div class="history-items">
-                    <div class="timeline-item" dates="02/1998 - 04/2004">
-                        <h4>National College of Art and Design (NCAD)</h4>
-                        <p>Sculptor in residence</p>
+                    <div class="timeline-item" dates="07/2015 - 12/2017">
+                        <h4>Apple inc. (by Globetech)</h4>
+                        <p>Data Analyst</p>
                     </div>
-                    <div class="timeline-item" dates="04/2004 - 06/2008">
-                        <h4>Fisher and Diaz Funeral Directors</h4>
-                        <p>Juinior Embalmer</p>
+                    <div class="timeline-item" dates="08/2015 - 09/2017">
+                        <h4>ARMA Research ltd.</h4>
+                        <p>Information Systems Manager</p>
                     </div>
-                    <div class="timeline-item" dates="06/2008 - 06/2011">
-                        <h4>Phantom Design Inc. Dublin</h4>
-                        <p>Junior Front End Developer</p>
+                    <div class="timeline-item" dates="03/2014 - 04/2015">
+                        <h4>The WEB (Gaming & Internet Services)</h4>
+                        <p>System & Network Administrator</p>
                     </div>
-                    <div class="timeline-item" dates="06/2011 - Present">
-                        <h4>Hooli Inc. Silicon Valley</h4>
-                        <p>Full Stack Web Developer</p>
+                    <div class="timeline-item" dates="01/2007 - 05/2009">
+                        <h4>Nokia inc (by Sitel)</h4>
+                        <p>Technical Advisor</p>
                     </div>
                 </div>
             </div>
@@ -81,9 +81,9 @@
                                 <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">Front End</h4>
+                                <h4 class="three-reasons-heading uppercase">Work Overview</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
+                                    I'm experienced in several IT sectors, from Data Analysis, Full Stack Development to Cloud Technologies. I have worked in various possitions from Technical Advisor, up to System/Network Administrator & Project Manager.
                                 </p>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                                 <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                             </div>
                             <div class="col-xs-10 col-sm-10">
-                                <h4 class="three-reasons-heading uppercase">Back End</h4>
+                                <h4 class="three-reasons-heading uppercase">Skill Set</h4>
                                 <p>
                                     I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
                                 </p>
@@ -107,31 +107,31 @@
                         <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
                             <span class="sr-only"> 90% complete</span>
                         </div>
-                        <span class="progress-type">HTML / HTML5</span>
+                        <span class="progress-type">DATA ANALYSIS</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                             <span class="sr-only"> 80% complete</span>
                         </div>
-                        <span class="progress-type">CSS / CSS3</span>
+                        <span class="progress-type">MANAGEMENT</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                            <span class="sr-only"> 70% complete</span>
+                            <span class="sr-only"> 60% complete</span>
                         </div>
-                        <span class="progress-type">JavaScript / jQuery</span>
+                        <span class="progress-type">FULL STACK DEVELOPEMENT</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                            <span class="sr-only"> 80% complete</span>
+                            <span class="sr-only"> 50% complete</span>
                         </div>
-                        <span class="progress-type">Python / Django</span>
+                        <span class="progress-type">PYTHON & CODING LANGUAGES</span>
                     </div>
                     <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                            <span class="sr-only"> 80% complete</span>
+                            <span class="sr-only"> 70% complete</span>
                         </div>
-                        <span class="progress-type">SQL / NoSQL</span>
+                        <span class="progress-type">CLOUD & DATABASES</span>
                     </div>
 
                 </div>
@@ -151,7 +151,7 @@
                 <h5 class="uppercase general-sub ">Download My CV</h5>
                 <p class="inline-block ">
                     Need a printable version of my CV? Download it here.
-                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf "><i class="fa fa-download " aria-hidden="true "></i></a>
+                    <a href="assets/cv/Stefanos Sgourdas Cv.pdf" target="_blank" class="cv-pdf "><i class="fa fa-download " aria-hidden="true "></i></a>
                 </p>
             </div>
             <div class="col-sm-4 ">
